# ml-inference-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
docker/: Dockerfile
k8s/argocd/: ml-platform-app.yaml
k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  poddisruptionbudget.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml  patch-model-config.yaml
notebooks/: data_exploration.ipynb  endpoint_test.ipynb
scripts/: download_data.py
src/api/: main.py  schemas.py
src/data/: loaders.py  processors.py
src/models/: sentence_transformers.py
src/utils/: config.py
tests/: test_api.py  test_model.py
