[project]
name = "ml-inference-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black==25.1.0",
    "fastapi==0.116.1",
    "flake8==7.3.0",
    "httpx==0.28.1",
    "ipykernel>=6.30.1",
    "kaggle>=1.7.4.5",
    "mlx-lm>=0.27.1",
    "mypy==1.17.0",
    "numpy==2.3.0",
    "openai>=1.101.0",
    "polars>=1.33.1",
    "pydantic==2.11.0",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "scikit-learn>=1.7.1",
    "sentence-transformers==5.0.0",
    "torch==2.8.0",
    "uvicorn[standard]==0.34.0",
]
